# spike-rs

./: .gitignore  .nvim.lua  .project.lua  Cargo.toml  README.md  README.org  build.ps1  build.rs  build.sh  build.template.ps1  gui.py  project.ps1  project.py  pycode.pyi  pyproject.toml  rustfmt.toml  tags  temp  test.py  test_.py  todo  todo.org  wrapper.h
_pycode_old/: converting.py  project.py  script_utils.py
_pycode_old/examples/: peak_detection.py  psth.py
_pycode_old/old/: operations.py
bkp/: #build.rs#  Cargo.toml  LICENSE  build.ps1  build.rs  hdf5.rs
bkp/_pycode_old/: operations.py
bkp/hdf5/: converter.rs  io.rs  utils.rs
bkp/mc_explorer/: Cargo.toml
bkp/pycode/: phase.py
bkp/pycode-rs/: mc_explorer.rs
bkp/pycode-rs_0/: pyphase.rs
bkp/pycode-rs_1/: pyproject.toml
bkp/tests/: Cargo.toml  build.rs
c_pycode/: pycode_h5.c  pycode_h5.h
doc/: README.org  content.md  todo.org
gui/: Cargo.toml
gui/src/: main.rs
hdf5-rs/: .nvim.lua  Cargo.toml  README.md  build.rs  build.rs.bkp
hdf5-rs/src/: error.rs  h5sys.rs  identifiers.rs  lib.rs  prelude.rs  utils.rs
implementations/memory/: Cargo.toml
implementations/native_c/: CMakeLists.txt  Cargo.toml  build.rs
implementations/native_c/src/: #lib.rs#  #pycode_h5.c#  lib.rs  pycode_h5.c  pycode_h5.h
implementations/native_c/test/: main.c
implementations/spike-h5/: Cargo.toml
mc_explorer/: Cargo.toml
mc_explorer/src/: h5analog.rs  h5content.rs  h5event.rs  h5recording.rs  lib.rs  old.rs
old/: hdf5.rs
old/hdf5/: h5converter.rs
pycode/: __init__.py  blabla.py  converter.py  converting_rules.py  globals.py  main.py  mc_explorer.py  operations.py  phase.py  pycode.py  script_utils.py  settings.py  states.py  test.py  utils.py
pycode-rs/: Cargo.toml  OUT_DIR.txt
pycode-rs/src/: h5content.rs  lib.rs  mc_explorer.rs  operations.rs  phaseh5.rs  pyphase.rs
pycode/examples/: psth.py  (+2 more)
pycode_c/: CMakeLists.txt  pycode_h5.c
spike-rs/: Cargo.toml  a.py  aaa.py  build.rs
src/: hdf5.rs  lib.rs  main.rs
tests/: Cargo.toml  a.py
(+79 files in other folders)
