[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pycode"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
include = [
        { path = "pycode.libs/hdf5.dll", format="sdist", when = "windows"},
        { path = "pycode.libs/libhdf5.so", format="sdist", when = "linux"},
        { path = "pycode.libs/hdf5.dll", format="wheel", when = "windows"},
        { path = "pycode.libs/libhdf5.so", format="wheel", when = "linux"},
]
